# gaussctrl

./: .gitignore  LICENSE.txt  README.md  hf_ctrlnet_inv.py  pyproject.toml  requirements.txt
data/bear/: sparse_pc.ply  transforms.json
data/bear/camera_paths/: render-path.json
data/dinosaur/: sparse_pc.ply  transforms.json
data/dinosaur/camera_paths/: render_dinosaur_final.json
data/face/: sparse_pc.ply  transforms.json
data/face/camera_paths/: render-path.json
data/fangzhou/: sparse_pc.ply  transforms.json
data/fangzhou/camera_paths/: render-path.json
data/garden/: sparse_pc.ply  transforms.json
data/garden/camera_paths/: render-path.json
data/stone_horse/: sparse_pc.ply  transforms.json
data/stone_horse/camera_paths/: render_horse.json
gaussctrl/: gc_config.py  gc_datamanager.py  gc_dataparser_ns.py  gc_dataset.py  gc_model.py  gc_pipeline.py  gc_render.py  gc_trainer.py  gs.py  gs_config.py  gs_datamanager.py  gs_dataparser_old.py  gs_dataset.py  gs_pipeline.py  render.py  utils.py
gs_edit/: gs.py  gs_config.py  gs_datamanager.py  gs_dataparser_colmap.py  gs_dataparser_ns.py  gs_pipeline.py  gs_pipeline_old.py  gs_trainer.py  in2n_config.py  utils.py
scripts/: bear.sh  dinosaur.sh  face.sh  fangzhou.sh  garden.sh  stone_horse.sh
